# Pixelation-NSSC

./: CMakeLists.txt
pixel/: CMakeLists.txt  package.xml
pixel/src/: planner.cpp  ros_pixelation.ino
src/: cam.cpp  planner.cpp  planner_husky.cpp  planner_original.cpp
